--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,5 +29,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:support-v13:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:cardview-v7:22.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.huxq17.xrefreshview:xrefreshview:3.6.0'
 }
