--- a/sectionpin/build.gradle
+++ b/sectionpin/build.gradle
@@ -29,3 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply from: 'bintray.gradle'
