--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.tuacy.mobile"
@@ -23,17 +23,17 @@ android {
 }
 
 dependencies {
-    compile project(':sectionpin')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation project(':sectionpin')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.android.support:support-v13:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:cardview-v7:22.2.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:22.2.1'
+    implementation 'com.android.support:design:22.2.1'
+    implementation 'com.android.support:support-v13:22.2.1'
+    implementation 'com.android.support:recyclerview-v7:22.2.1'
+    implementation 'com.android.support:cardview-v7:22.2.1'
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.huxq17.xrefreshview:xrefreshview:3.6.0'
+    implementation 'com.huxq17.xrefreshview:xrefreshview:3.6.0'
 }
